Revision history for SPVM
0.9513_01  2022-04-22
        [CHANGE]
        * Add no_compiler_api to SPVM::Builder::Config::Exe
        * Add no_precompile to SPVM::Builder::Config::Exe
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove -O|--optimize option from spvmcc
0.9512_01  2021-04-19
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove Fn->srand because this method is not thread safe.
        * Change Fn->crand arguments because this method become thread safe.
          [Before]
          static method crand : int ();
          
          [After]
          static method crand : int ($seed : int*);

        * Change Fn->rand arguments because this method become thread safe.
          [Before]
          static method rand : double ()
          
          [After]
          static method rand : double ($seed : int*)
          
0.9512  2021-04-21
        [CHANGE]
        * Add Point module.
        * Improve method call error message.
        * Add --dynamic-lib option to spvmcc. spvmcc can create a dynamic library.
        * Add --static-lib option to spvmcc. spvmcc can create a static library.
        * Cache method id, field id, class variable id in precompile.
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * new_stack_trace_raw and new_stack_trace don't need file argument. File name got from class information.
          new_stack_trace_raw and new_stack_trace receive method id.
        
          [Before]
          void* (*new_stack_trace_raw)(SPVM_ENV* env, void* exception, const char* class_name, const char* method_name, const char* file, int32_t line);
          void* (*new_stack_trace)(SPVM_ENV* env, void* exception, const char* class_name, const char* method_name, const char* file, int32_t line);
          
          [After]
          void* (*new_stack_trace_raw)(SPVM_ENV* env, void* exception, int32_t method_id, int32_t line);